--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  max-width: 700px;
+  text-align: center;
+  border: 1px solid rgb(161, 158, 158);
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px rgb(154, 153, 153);
+  padding: 20px 15px;
+  margin: 0 auto;
+  margin-top: 20px;
 }
